--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WedStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"rel="stylesheet">
+    
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>    
@@ -37,13 +44,13 @@
     </header>
     <main>
         <!-- секція герой -->
-        <section>
-            <h2>Ефективні рішення для вашого бізнесу</h2>
-            <button type="button">Замовити послугу</button>
+        <section class="hero">
+            <h1>Ефективні рішення для вашого бізнесу</h2>
+            <button class="hero-button" type="button">Замовити послугу</button>
         </section>
         <!-- переваги -->
     <section>
-            <h2>Переваги</h2>
+        <h2 class="section-title">Переваги</h2>
         <ul>
             <li>
                 <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -64,7 +71,7 @@
         </ul>
     </section>
     <section>
-        <H1>Чим ми займаємося</H1>
+        <h2 class="section-title">Чим ми займаємося</h2>
         <ul>
             <li><img src="/зображення/advantage/Example-1.jpg" alt="Приклади робіт"></li>
             <li><img src="/зображення/advantage/example-2.jpg" alt="Приклади робіт"></li>
@@ -72,7 +79,7 @@
         </ul>
     </section>
     <section>
-        <h2>Наша команда</h2>
+        <h2 class="section-title">Наша команда</h2>
         <ul>
             <li>
                 <img src="/зображення/team/img.jpg" alt="Учасник команди">
