добавив стилі до хедера і футера

--- a/index.html
+++ b/index.html
@@ -53,20 +53,20 @@
         <h2 class="section-title">Переваги</h2>
         <ul>
             <li>
-                <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                <h3 class="h3">УВАГА ДО ДЕТАЛЕЙ</h3>
+                <p class="p">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
             </li>
-            <li>
-                <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <li >
+                <h3 class="h3">ПУНКТУАЛЬНІСТЬ</h3>
+                <p class="p">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
             </li>
-            <li>
-                <h3>ПЛАНУВАННЯ</h3>
-                <p>Так само консультація з широким активом значною мірою зумовлює</p>
+            <li >
+                <h3 class="h3">ПЛАНУВАННЯ</h3>
+                <p class="p">Так само консультація з широким активом значною мірою зумовлює</p>
             </li>
-            <li>
-                <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <li >
+                <h3 class="h3">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                <p class="p">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
         </ul>
     </section>
@@ -83,33 +83,33 @@
         <ul>
             <li>
                 <img src="/зображення/team/img.jpg" alt="Учасник команди">
-                <h3>Ігор Дем'яненко</h3>
-                <p>Product Designer</p>
+                <h3 class="name">Ігор Дем'яненко</h3>
+                <p class="job">Product Designer</p>
             </li>
             <li>
                 <img src="/зображення/team/img (1).jpg" alt="Учасник команди">
-                <h3>Ольга Рєпіна</h3>
-                <p>Frontend Developer</p>
+                <h3 class="name">Ольга Рєпіна</h3>
+                <p class="job">Frontend Developer</p>
             </li>
             <li>
                 <img src="/зображення/team/img (2).jpg" alt="Учасник команди">
-                <h3>Микола Тарасов</h3>
-                <p>Marketing</p>
+                <h3 class="name">Микола Тарасов</h3>
+                <p class="job">Marketing</p>
             </li>
             <li>
                 <img src="/зображення/team/img (3).jpg" alt="Учасник команди">
-                <h3>Михайло Єрмаков</h3>
-                <p>UI Designer</p>
+                <h3 class="name">Михайло Єрмаков</h3>
+                <p class="job">UI Designer</p>
             </li>
         </ul>
     </section>
     </main>
     <footer>      
         <ul>
-            <li> <a href="./">WebStudio</a></li>
+            <li> <a href="./" class="logo">Web<span>Studio</a></li>
             <li> <address> м. Київ, пр-т Лесі Українки, 26</address></li>
-            <li><a href="">info@devstudio.com</a></li>
-            <li><a href="">+38 096 111 11 11</a></li>
+            <li><a href="" class="contacts-link">info@devstudio.com</a></li>
+            <li><a href="" class="contacts-link">+38 096 111 11 11</a></li>
         </ul>
     </footer>  
 </body>
