--- a/index.html
+++ b/index.html
@@ -53,20 +53,20 @@
         <h2 class="section-title">Переваги</h2>
         <ul>
             <li>
-                <h3 class="h3">УВАГА ДО ДЕТАЛЕЙ</h3>
-                <p class="p">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                <h3 class="advantages-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
             </li>
             <li >
-                <h3 class="h3">ПУНКТУАЛЬНІСТЬ</h3>
-                <p class="p">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                <h3 class="advantages-title">ПУНКТУАЛЬНІСТЬ</h3>
+                <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
             </li>
             <li >
-                <h3 class="h3">ПЛАНУВАННЯ</h3>
-                <p class="p">Так само консультація з широким активом значною мірою зумовлює</p>
+                <h3 class="advantages-title">ПЛАНУВАННЯ</h3>
+                <p class="text">Так само консультація з широким активом значною мірою зумовлює</p>
             </li>
             <li >
-                <h3 class="h3">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                <p class="p">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                <h3 class="advantages-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
         </ul>
     </section>
@@ -105,11 +105,15 @@
     </section>
     </main>
     <footer>      
-        <ul>
-            <li> <a href="./" class="logo">Web<span>Studio</a></li>
-            <li> <address> м. Київ, пр-т Лесі Українки, 26</address></li>
-            <li><a href="" class="contacts-link">info@devstudio.com</a></li>
-            <li><a href="" class="contacts-link">+38 096 111 11 11</a></li>
+         <a href="./" class="logo">Web<span>Studio</a></li>
+         <address> м. Київ, пр-т Лесі Українки, 26</address></li>
+        <ul class="contacts-list">
+            <li class="contacts-item">
+                <a href="" class="contacts-link">info@devstudio.com</a>
+            </li>
+            <li class="contacts-item">
+                <a href="" class="contacts-link">+38 096 111 11 11</a>
+            </li>
         </ul>
     </footer>  
 </body>
